# USTC-Fundamental-of-AI

./: .gitignore  README.md
Homework/hw1/: Homework1.md
Homework/hw2/: Homework2.md
Homework/hw3/: Homework3.md
Homework/hw4/: 4.pptx  Homework4.md
Homework/hw5/: 5.pptx  Homework5.md
Homework/hw6/: 6.pptx  Homework6.md
Homework/hw7/: 7.pptx  Homework7.md
Homework/hw8&9/: 8&9.pptx  Homework8.md
Lab/Learning/: README.md
Lab/Learning/DeepLearning/data/: input_part.txt  output.txt
Lab/Learning/DeepLearning/output/: loss.csv
Lab/Learning/DeepLearning/src/: GPT.ipynb  GPT.py  loss.csv  test.ipynb  train.py
Lab/Learning/DeepLearning/tutorial/: README.md
Lab/Learning/MachineLearning/src/: Bayesian-network.py  KMeans.py
Lab/Learning/pytorchEdu/: FeedforwardNN.py  linearRegression.py
Lab/Search/: README.md  Report.md
Lab/Search/astar/: CMakeLists.txt
Lab/Search/astar/output/: output0.txt  output1.txt  output2.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
Lab/Search/astar/src/: astar.cpp  astar.hpp  compare.cpp  test.cpp
Lab/Search/csp/: CMakeLists.txt
Lab/Search/csp/output/: output0.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
Lab/Search/csp/src/: csp.cpp  csp.hpp
Note/: A star 算法.md  Graph Search vs. Tree-Like Search.md  Note.md  局部搜索算法 之 局部搜索算法，爬山法，模拟退火，集束搜索，遗传算法.md  逻辑.md
